[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bestla-yggdrasil"
version = "0.2.0"
description = "A stateful, hierarchical multi-agent tool framework under the Bestla namespace"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Modified MIT License"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "jsonschema>=4.0.0",
    "immutables>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage[toml]>=7.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/BestlaAI/Yggdrasil"
Repository = "https://github.com/BestlaAI/Yggdrasil"
Issues = "https://github.com/BestlaAI/Yggdrasil/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bestla*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and relative imports
# F821: DynamicStr/DynamicFiltered use string literals that aren't variables
"tests/**/*.py" = ["S101", "F821"]

[tool.coverage.run]
source = ["bestla"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = [
    "--cov=bestla",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
